--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
   },
   "dependencies": {
     "@metamask/eth-sig-util": "^5.0.2",
+    "@mithun297/stackos-v2-appcrypto": "^1.0.0",
     "@nucypher/umbral-pre": "0.7.0",
+    "@pratikgohil.dev/stackos-v2contract-package": "1.1.6",
     "antd": "^5.1.6",
     "axios": "^1.2.6",
+    "bn.js": "^5.2.1",
     "eth-crypto": "^2.5.0",
     "ethereumjs-util": "^7.1.5",
+    "i": "^0.3.7",
     "ipfs-http-client": "^60.0.0",
     "next": "latest",
+    "npm": "^9.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "web3": "^1.8.1"
